# property-price-prediction-in-sao-paulo

./: .gitignore  README.md  cv_results.csv  forest_regressor.py  linear_regression.py  main.py  pyproject.toml  requirements.txt  tree_regressor.py
